Use Docker to run Yarn

--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-
 # next.js build output
 .next
 
@@ -177,3 +174,14 @@ $RECYCLE.BIN/
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+
+# ------------------------------------------------------------------------------
+### Project
+# ------------------------------------------------------------------------------
+# logs
+/yarn-debug.log*
+/yarn-error.log*
+
+# yarn
+/yarn.lock
