--- a/package.json
+++ b/package.json
@@ -8,5 +8,18 @@
     "repository": {
         "url": "https://github.com/meritoo/common-frontend",
         "type": "git"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/preset-env": "^7.8.6",
+        "@babel/preset-flow": "^7.8.3",
+        "@babel/preset-react": "^7.8.3",
+        "babel-core": "^6.26.3",
+        "babel-plugin-styled-components": "^1.10.7",
+        "jest": "^25.1.0"
+    },
+    "scripts": {
+        "test": "jest --coverageDirectory=reports/jest/code_coverage",
+        "test-watch": "jest --watchAll --coverageDirectory=reports/jest/code_coverage"
     }
 }
