--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "meritoo-common-frontend",
+    "version": "0.1.2",
     "description": "Common & useful resources related to frontend",
     "author": "Meritoo <github@meritoo.pl>",
     "license": "MIT",
