Add main file with all stylesheets imported to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "meritoo-common-frontend",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "Common & useful resources related to frontend",
     "author": "Meritoo <github@meritoo.pl>",
     "license": "MIT",
@@ -23,5 +23,6 @@
         "test": "jest --coverageDirectory=reports/jest/code_coverage",
         "test-watch": "jest --watchAll --coverageDirectory=reports/jest/code_coverage"
     },
-    "main": "src/js/utilities/index.js"
+    "main": "src/js/utilities/index.js",
+    "sass": "scss/main.scss"
 }
